fix talent selector too tall

--- a/src/styles/charsheetSections/_talents.scss
+++ b/src/styles/charsheetSections/_talents.scss
@@ -142,7 +142,7 @@ div.widget-checkbox {
   min-width: 850px;
   background-color: base.$shadedBgColor;
   border-radius: 10px;
-  height: 1000px;
+  height: 80vh;
   padding: 20px;
 }
 
